--- a/src/components/Page/Page.css
+++ b/src/components/Page/Page.css
@@ -22,7 +22,6 @@
   overflow: hidden;
 }
 
-/* Button area */
 .btn-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -67,7 +66,7 @@
 
 @media (max-width: 480px) {
   .btn-container {
-    grid-template-columns: 1fr;
+    grid-template-columns: auto;
     gap: 0.6rem;
     padding: 0.6rem;
   }
